# ML-Project

./: .replit  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
templates/: index.html  prediction.html
